[package]
name = "personal-site"
version = "0.1.0"
authors = ["Diego Veralli <diego@diegoveralli.com>"]
license = "GPL-3.0"
description = "A silly personal site built with Yew.rs"
repository = "https://github.com/diegov/wasm_site"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
proptest = "0.10.*"

[build-dependencies]
handlebars = "3.5.5"

[build-dependencies.serde]
version = "1.0.*"
default-features = false

[build-dependencies.serde_json]
version = "1.0.*"
default-features = false

[dependencies]
yew = "0.18.*"
wasm-bindgen = "0.2"
wee_alloc = "0.4.*"
text_io = "0.1.*"
percent-encoding = "*"
unidecode = "0.3.*"

[dependencies.js-sys]
version = "0.3"
default-features = false

[dependencies.web-sys]
version = "0.3"
default-features = false
features = [
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
  'HtmlHeadElement',
  'HtmlStyleElement',
  'HtmlCollection',
  'Performance',
  'DomRect',
]

[dependencies.anyhow]
version = "1"
default-features = false

[dependencies.serde]
version = "1.0.115"
default-features = false

[dependencies.url]
version = "2.*.*"
default-features = false

[profile.release]
panic = 'abort' 
codegen-units = 1
opt-level = 'z'
lto = true
debug = false
rpath = false
debug-assertions = false
incremental = false
overflow-checks = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['--strip-debug', '--strip-dwarf', '-Oz']
